# avprocessor

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  Rocket.toml  sql_scripts.md  sqlx-data.json
.sqlx/: query-005d3a5e1e5043eca87a470f36c2683a5e5d912d1180b8819c212bd09939bb24.json  query-0bd1fe933c8bb0db0b45a65caef2d0dfe8375966f61afd895a573d46c6f5650a.json  query-11c31ab7ddf7a84eebbfe75205f76c716e4f1533bcbb002dddd8e75edc610bc7.json  query-2b961148b57c7f7579d89eea39492f17bd495a9e7c1b4b28a63ddc0d0080f0d9.json  query-2e9ef73094be7389b196ef89af15743cd781de5eb281d2022ed47eeebc388ff9.json  query-3aa8bf755a5db9f453b5e1e01529c64b398aacd44d51d1471aec38de84959ec2.json  query-3ee5c2a1b2f544bef2417e020f6b95ce30bb655d8e900bb7b894e81d1d6e73b8.json  query-547589b8a89c32a27407826aa823843019ca4c7784dc80101dd9cf89d5a8be0b.json  query-588505c0415642ab96ee40f645d0d5758be39f8acd1d9d1a4b9d9fe86afd6ddf.json  query-63a83c98da41b4c64185ac3e3791c22ba5925fbc02b24cae4e4157cf341e7401.json  query-73dcb28485c5c178d8c752e328307e639aa7ecb342f508fcc3daebf5b988ba4e.json  query-74677c083bdec14a79c7304c00e89141a073bc8dcf85ece7f2b5d7c2348b57d6.json  query-7e1b2f87e6aec84bbd68a042a5f946ffba86ef894597d03cc4fbff2b7ac0cad1.json  query-880b2b8a39443621b044ddb5f7a22f5fbe5b2abde3e628f001d3b82c88e806bb.json  query-90fc454b16b905f1ca7ffe9986d743bd5c0ea0437158f932d7d114f0be2620b4.json  query-ad52a3310bf8f5538aa81f2294b6c40f5c655340e9c7798fda1ed1c7b8387752.json  query-d28b966c0905444faced26654f6b41ef8e78cc5cd872248ffd694fa6738f97e6.json  query-ffdea2de2bf5c13090e64ba69a275b19ade69a4138946e54219d0e30896545a9.json
alsaconfig/: asound.conf  update_volume.py
avprocessor-ui/: package-lock.json  package.json
example-systemctl/: avprocessor.service  camilladsp.service  (+1 more)
(+42 files in other folders)
