[package]
name = "avprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = "0.4.30"
tungstenite = { version = "0.20.0" }
url = { version = "2.1.0" }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "offline"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_sqlite"]
