[package]
name = "avprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
chrono = "0.4.30"
tungstenite = { version = "0.20.0" }
url = { version = "2.1.0" }
#serde_yaml = "0.9"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "=0.1.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]
